@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Track.icc,v 1.2 2000-02-16 16:10:06 kurasige Exp $
+// $Id: G4Track.icc,v 1.3 2000-06-02 05:36:50 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //-----------------------------------------------------------------
@@ -227,7 +227,11 @@
    inline G4double G4Track::GetWeight() const
    { return fWeight; }
 
-
+// user information
+   inline G4VUserTrackInformation* GetUserInformation() const
+   { return fpUserInformation; }
+   inline void SetUserInformation(G4VUserTrackInformation* aValue)
+   { fpUserInformation = aValue; }
 
 
 
