@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Track.cc,v 1.3 1999-12-15 14:53:56 gunter Exp $
+// $Id: G4Track.cc,v 1.4 2000-06-02 05:36:53 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -47,6 +47,8 @@ G4Track::G4Track(G4DynamicParticle* apValueDynamicParticle,
    fBelowThreshold = false;
    fGoodForTracking = false;
    fWeight = 1.0;
+
+   fpUserInformation = 0;
 }
 
 //////////////////
@@ -70,6 +72,8 @@ G4Track::G4Track()
    fBelowThreshold = false;
    fGoodForTracking = false;
    fWeight = 1.0;
+
+   fpUserInformation = 0;
 }
 
 ///////////////////
@@ -77,6 +81,7 @@ G4Track::~G4Track()
 ///////////////////
 {
    delete fpDynamicParticle;
+   delete fpUserInformation;
 }
 
 ///////////////////
