@@ -1,4 +1,4 @@
-$Id: History,v 1.19 2000-06-01 02:28:52 kurasige Exp $
+$Id: History,v 1.20 2000-06-02 05:36:46 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+June 2, 2000 M.Asai
+- Add G4VUserTrackInformation class and its pointer data member in G4Track
+
 June 1 2000 H.Kurashige (track-V01-01-01a)
 -  Removed "const" from the return value type of G4StepPoint::GetPhysicalVolume()
 
